ver1 tao cau truc du an

--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- Font-awsome CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
+    <!-- Owl Carousel -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+    <!-- My CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <!--Home Section-->
+    <header id="home"></header>
+
+
+    <!-- Navbar Section -->
+    <nav id="navbar"></nav>
+
+    <!-- About Section -->
+    <section id="about"></section>
+
+    <!-- Team Section -->
+    <section id="team"></section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio"></section>
+
+    <!-- Services Section -->
+    <section id="services"></section>
+
+    <!-- Feature Section -->
+    <section id="feature"></section>
+
+    <!-- Blog Section -->
+    <section id="blog"></section>
+
+    <!-- Price-table Section -->
+    <section id="price-table"></section>
+
+    <!-- Contact Section -->
+    <section id="contact"></section>
+
+    <!-- Footer Section -->
+    <footer id="footer"></footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="./lib/jquery.countup.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
