add img folder & modified rootscss

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>One Page Massive</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font-awsome CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
+    <!-- Google Fonts-->
+    <link
+        href="http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200"
+        rel="stylesheet" type="text/css">
     <!-- Owl Carousel -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -22,11 +26,14 @@
 
 <body>
     <!--Home Section-->
-    <header id="home"></header>
+    <header id="home">
+        <!-- Navbar Section -->
+        <nav id="navbar"></nav>
+
+    </header>
 
 
-    <!-- Navbar Section -->
-    <nav id="navbar"></nav>
+
 
     <!-- About Section -->
     <section id="about"></section>
