--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link
         href="http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200"
         rel="stylesheet" type="text/css">
+    <!--Icons-->
+    <link rel="stylesheet" href="./css/icon/linea-icon.css">
     <!-- Owl Carousel -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -29,7 +31,6 @@
     <header id="home">
         <!-- Navbar Section -->
         <nav id="navbar"></nav>
-
     </header>
 
 
