ver2 html feature and fun-action section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>One Page Massive</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font-awsome CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
+    <!-- Google Fonts-->
+    <link
+        href="http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200"
+        rel="stylesheet" type="text/css">
     <!-- Owl Carousel -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -22,11 +26,14 @@
 
 <body>
     <!--Home Section-->
-    <header id="home"></header>
+    <header id="home">
+        <!-- Navbar Section -->
+        <nav id="navbar"></nav>
+
+    </header>
 
 
-    <!-- Navbar Section -->
-    <nav id="navbar"></nav>
+
 
     <!-- About Section -->
     <section id="about"></section>
@@ -41,7 +48,52 @@
     <section id="services"></section>
 
     <!-- Feature Section -->
-    <section id="feature"></section>
+    <section id="feature">
+        <div class="container">
+            <div class="feature__header">
+                <h3>CORE FEATURE</h3>
+                <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam
+                    pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+            </div>
+            <div class="feature__content">
+                <div class="row">
+                    <div class="col-md-6 feature__left">
+                        <img src="img/tab-1.png" alt="feature1" class="img-fluid">
+                    </div>
+                    <div class="col-md-6 feature__right">
+                        <div class="feature__item">
+                            <h3>01</h3>
+                            <h4>Mega menu</h4>
+                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.</p>
+                        </div>
+                        <div class="feature__item">
+                            <h3>02</h3> 
+                            <h4>Unlimited portfolio grid</h4>
+                            <p>Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
+                        </div>
+                        <div class="feature__item">
+                            <h3>03</h3>
+                            <h4>HUGE SHORTCODE</h4>
+                            <p>Augue at maximus Pellentesque eu quam sem, ac malesuada leo sem quam pellente. vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
+                        </div>
+                        <div class="feature__item">
+                            <a href="" class="btn">Purchase now</a>
+                            <a href="" class="btn">View all</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Fun action Section -->
+    <div class="fun-action">
+        <div class="container">
+            <div class="row">
+                
+            </div>
+        </div>
+    </div>
 
     <!-- Blog Section -->
     <section id="blog"></section>
