update home sectionn

--- a/index.html
+++ b/index.html
@@ -30,7 +30,65 @@
     <!--Home Section-->
     <header id="home">
         <!-- Navbar Section -->
-        <nav id="navbar"></nav>
+        <nav id="navbar" class="navbar navbar-expand">
+            <div class="col-md-1">
+                <img class="img-fluid nav_brand" src="./img/logo.png" alt="">
+            </div>
+            <div class="col-md-8 ml-auto">
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#feature">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#price-tabe">Price Table</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!--Carousel Section-->
+        <div class="owl-carousel owl-theme">
+            <div class="item d-flex align-items-center" style="background-image: url('./img/banner_bs/bs1.jpg');">
+                <div class="container item__content">
+                    <h1 class="text-uppercase">
+                        <span class="text-uppercase">Hi There ! </span><br>
+                        We Are Massive
+                    </h1>
+                    <p>
+                        Integer nec nulla bibendum, venenatis elit vel, vulputate nulla. Quisque lacinia nisi erat,
+                        <br>
+                        ut scelerisque augue pharetra et. Aliquam efficitur lacus eget.
+                    </p>
+                </div>
+            </div>
+            <div class="item d-flex align-items-center" style="background-image: url('./img/banner_bs/bs2.jpg');">
+                <div class="container item__content">
+                    <h1 class="text-uppercase">
+                        <span class="text-uppercase"> We've Lots of !</span><br>
+                        Reusable Components
+                    </h1>
+                    <p>
+                        Vulputate nulla. Quisque lacinia nisi erat,
+                    </p>
+                </div>
+            </div>
+            <div class="item d-flex align-items-center" style="background-image: url('./img/banner_bs/bs3.jpg');">
+                <div class="container item__content">
+                    <h1 class="text-white text-uppercase">
+                        <span class="text-white text-uppercase"> Why Choose massive ? </span><br>
+                        unlimited possibilities
+                    </h1>
+                    <p class="text-white">
+                        Integer nec nulla bibendum, venenatis elit vel, vulputate nulla. Quisque lacinia nisi erat,
+                        <br>
+                        ut scelerisque augue pharetra et. Aliquam efficitur lacus eget.
+                    </p>
+                </div>
+            </div>
+        </div>
     </header>
 
 
