done section about

--- a/index.html
+++ b/index.html
@@ -91,7 +91,95 @@
         </div>
     </header>
     <!-- About Section -->
-    <section id="about"></section>
+    <section id="about">
+        <div class="container mt-5 pb-5">
+            <div class="row justify-content-center py-5">
+                <div class="col-md-8 text-center">
+                    <h3 class="text-uppercase">WE Love to Design</h3>
+                    <p class="mt-4">Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores
+                        nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-10">
+                    <div class="row flex-nowrap justify-content-center">
+                        <div class="col-md-4 mx-5 p-4 border about__item">
+                            <div class="about__icon-wrapper">
+                                <span class="icon-basic_pencil_ruler about__icon"></span>
+                            </div>
+                            <h4 class="text-uppercase">MODERN DESIGN</h4>
+                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent
+                                sed nisi eleifend.</p>
+                        </div>
+                        <div class="col-md-4 mx-5 p-4 border about__item">
+                            <div class="about__icon-wrapper">
+                                <span class="icon-mobile about__icon"></span>
+                            </div>
+                            <h4 class="text-uppercase">MODERN DESIGN</h4>
+                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent
+                                sed nisi eleifend.</p>
+                        </div>
+                        <div class="col-md-4 mx-5 p-4 border about__item">
+                            <div class="about__icon-wrapper">
+                                <span class="icon-wine about__icon"></span>
+                            </div>
+                            <h4 class="text-uppercase">MODERN DESIGN</h4>
+                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent
+                                sed nisi eleifend.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid about__skill mt-5">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-12 bg__overlay"></div>
+                <div class="col-md-5">
+                    <h3 class="text-uppercase text-white text-center">Skills and Experience</h3>
+                </div>
+                <div class="col-md-5 pl-5">
+                    <div class="container">
+                        <div class="row flex-column skill__details justify-content-center">
+                            <div class="col-md-10 d-flex flex-column justify-content-around">
+                                <div>
+                                    <h4 class="text-uppercase text-white">We are damn expart !</h4>
+                                    <p class="text-white">We are a team of multi-skilled and curious digital specialists
+                                        who are always up for
+                                        a massive
+                                        challenge forever. We are a team of multi-skilled and curious digital
+                                        specialists
+                                        who are always
+                                        up for a massive challenge forever.</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar bg-white text-dark text-left p-2" role="progressbar"
+                                        style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                        HTML / CSS / JQUERY
+                                        <span>80%</span>
+                                    </div>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar bg-white text-dark text-left p-2" role="progressbar"
+                                        style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                                        PHOTOSHOP
+                                        <span>90%</span>
+                                    </div>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar bg-white text-dark text-left p-2" role="progressbar"
+                                        style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                                        GRAPHIC DESIGN
+                                        <span>75%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Team Section -->
     <section id="team"></section>
@@ -191,10 +279,10 @@
                                 <img src="img/post/p1.jpg" alt="blog-1" class="img-fluid">
                             </div>
                             <div class="item__info">
-                                <div class="date"></div> 
+                                <div class="date"></div>
                                 <h4 class="text-upercase">
                                     <a href="">Quis velit lorem. Nam a neque consectetur commodo</a>
-                                </h4> 
+                                </h4>
                                 <ul>
                                     <li>
                                         <a href="">Interface,</a>
@@ -202,17 +290,17 @@
                                     <li>
                                         <a href="">Standard,</a>
                                     </li>
-                                </ul>  
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="blog__item">
                             <div class="item__info">
-                                <div class="date"></div> 
+                                <div class="date"></div>
                                 <h4 class="text-upercase">
                                     <a href="">Quis velit lorem. Nam a neque consectetur commodo</a>
-                                </h4> 
+                                </h4>
                                 <ul>
                                     <li>
                                         <a href="">Interface,</a>
@@ -220,12 +308,12 @@
                                     <li>
                                         <a href="">Standard,</a>
                                     </li>
-                                </ul>  
+                                </ul>
                             </div>
                             <div class="item_img">
                                 <img src="img/post/p2.jpg" alt="blog-2" class="img-fluid">
                             </div>
-                            
+
                         </div>
                     </div>
                     <div class="col-4">
@@ -234,10 +322,10 @@
                                 <img src="img/post/p3.jpg" alt="blog-3" class="img-fluid">
                             </div>
                             <div class="item__info">
-                                <div class="date"></div> 
+                                <div class="date"></div>
                                 <h4 class="text-upercase">
                                     <a href="">Quis velit lorem. Nam a neque consectetur commodo</a>
-                                </h4> 
+                                </h4>
                                 <ul>
                                     <li>
                                         <a href="">Interface,</a>
@@ -245,8 +333,8 @@
                                     <li>
                                         <a href="">Standard,</a>
                                     </li>
-                                </ul>  
-                            </div>   
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
