--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Navbar Section -->
         <nav id="navbar" class="navbar navbar-expand">
             <div class="col-md-2">
-                <img class="nav_brand" src="./img/logo.png" alt="">
+                <a href=""><img class="nav_brand" src="./img/logo.png" alt=""></a>
             </div>
             <div class="col-md-8 ml-auto">
                 <ul class="navbar-nav justify-content-end">
