--- a/index.html
+++ b/index.html
@@ -638,11 +638,14 @@
 
     <!-- Feature Section -->
     <section id="feature">
-        <div class="container">
-            <div class="feature__header">
-                <h3>Core feature</h3>
-                <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam
-                    pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+        <div class="container py-5">
+            <div class="row justify-content-center py-5 heading__section_mb">
+                <div class="col-md-8 feature__header text-center">
+                    <h3 class="text-uppercase">Core feature</h3>
+                    <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
+                        malesuada leo sem quam
+                        pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+                </div>
             </div>
             <div class="feature__content">
                 <div class="row">
@@ -652,25 +655,25 @@
                     <div class="col-md-6 feature__right">
                         <div class="feature__item">
                             <h3>01</h3>
-                            <h4>Mega menu</h4>
+                            <h4 class="text-uppercase">Mega menu</h4>
                             <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent
                                 sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.</p>
                         </div>
                         <div class="feature__item">
                             <h3>02</h3>
-                            <h4>Unlimited portfolio grid</h4>
+                            <h4 class="text-uppercase">Unlimited portfolio grid</h4>
                             <p>Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Fringilla augue at maximus
                                 vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
                         </div>
                         <div class="feature__item">
                             <h3>03</h3>
-                            <h4>HUGE SHORTCODE</h4>
+                            <h4 class="text-uppercase">HUGE SHORTCODE</h4>
                             <p>Augue at maximus Pellentesque eu quam sem, ac malesuada leo sem quam pellente.
                                 vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
                         </div>
                         <div class="feature__item">
-                            <a href="" class="btn">Purchase now</a>
-                            <a href="" class="btn">View all</a>
+                            <a href="#" class="btn btn-black mr-md-4">Purchase now</a>
+                            <a href="#" class="btn btn-white">View all</a>
                         </div>
                     </div>
                 </div>
@@ -679,27 +682,39 @@
         <div class="fun-action">
             <div class="container">
                 <div class="row fun-action__content">
-                    <div class="col-4 fun-action__item">
-                        <div class="item__icon">
-                            <i class="icomoon icon-smiley"></i>
-                        </div>
-                        <div class="item__content">
-                            <h2>36</h2>
-                            <h3>Clients handled</h3>
-                        </div>
-                    </div>
-                    <div class="col-4 fun-action__item">
-                        <div class="item__icon">
-                            <i class="icomoon icon-smiley"></i>
-                        </div>
-                        <div class="item__content">
-                            <h2>29</h2>
-                            <h3>Project completed</h3>
+                    <div class="col-md-4">
+                        <div class="fun-action__item">
+                            <div class="item__icon">
+                                <i class="icon-happy"></i>
+                            </div>
+                            <div class="item__content">
+                                <h2>36</h2>
+                                <span>Clients handled</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-4 fun-action__item">
-                        <h2>17</h2>
-                        <h3>Design award won</h3>
+                    <div class="col-md-4">
+                        <div class="fun-action__item">
+                            <div class="item__icon">
+                                <i class="icon-flag"></i>
+                            </div>
+                            <div class="item__content">
+                                <h2>29</h2>
+                                <span>Project completed</span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="fun-action__item">
+                            <div class="item__icon">
+                                <i class="icon-ribbon"></i>
+                            </div>
+                            <div class="item__content">
+                                <h2>17</h2>
+                                <span>Design award won</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -710,25 +725,30 @@
 
 
     <!-- Blog Section -->
-    <section id="blog">
+    <section id="blog" class="content__padding">
         <div class="container">
-            <div class="blog__header">
-                <h3>Blog</h3>
-                <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam
-                    pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+            <div class="row justify-content-center py-5 heading__section_mb">
+                <div class="col-md-8">
+                    <div class="blog__header text-center">
+
+                        <h3 class="text-uppercase">Blog</h3>
+                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
+                            malesuada leo
+                            sem quam
+                            pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+                    </div>
+                </div>
             </div>
             <div class="blog__content">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4 px-0">
                         <div class="blog__item">
-                            <div class="item_img">
+                            <div class="item__img">
                                 <img src="img/post/p1.jpg" alt="blog-1" class="img-fluid">
                             </div>
-                            <div class="item__info">
+                            <div class="item__info pl-0">
                                 <div class="date"></div>
-                                <h4 class="text-upercase">
-                                    <a href="">Quis velit lorem. Nam a neque consectetur commodo</a>
-                                </h4>
+                                <a href="" class="text-upercase">Quis velit lorem. Nam a neque consectetur commodo</a>
                                 <ul>
                                     <li>
                                         <a href="">Interface,</a>
@@ -740,13 +760,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 px-0">
                         <div class="blog__item">
                             <div class="item__info">
                                 <div class="date"></div>
-                                <h4 class="text-upercase">
-                                    <a href="">Quis velit lorem. Nam a neque consectetur commodo</a>
-                                </h4>
+                                <a href="" class="text-upercase">Quis velit lorem. Nam a neque consectetur commodo</a>
                                 <ul>
                                     <li>
                                         <a href="">Interface,</a>
@@ -756,22 +774,20 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="item_img">
+                            <div class="item__img top-0">
                                 <img src="img/post/p2.jpg" alt="blog-2" class="img-fluid">
                             </div>
 
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 px-0">
                         <div class="blog__item">
-                            <div class="item_img">
+                            <div class="item__img">
                                 <img src="img/post/p3.jpg" alt="blog-3" class="img-fluid">
                             </div>
                             <div class="item__info">
                                 <div class="date"></div>
-                                <h4 class="text-upercase">
-                                    <a href="">Quis velit lorem. Nam a neque consectetur commodo</a>
-                                </h4>
+                                <a href="" class="text-upercase">Quis velit lorem. Nam a neque consectetur commodo</a>
                                 <ul>
                                     <li>
                                         <a href="">Interface,</a>
@@ -784,12 +800,198 @@
                         </div>
                     </div>
                 </div>
+                <div class="blog__a mt-5 inline-block text-center">
+                    <a href="#" class="text-uppercase">View all blogs</a>
+                    <i class="icon-arrows_slim_right"></i>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Testimonial -->
+    <section id="testimonial">
+        <div class="container content__padding">
+            <div class="owl-2 owl-carousel">
+                <div class="testimonial__item">
+                    <div class="item__img">
+                        <img src="img/event_avatar1.jpg" alt="testimonial1">
+                    </div>
+                    <div class="item__content">
+                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
+                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                        <div class="name">- Kevin Paige -</div>
+                        <span>ABC</span>
+                    </div>
+                </div>
+                <div class="testimonial__item">
+                    <div class="item__img">
+                        <img src="img/event_avatar3.jpg" alt="testimonial3">
+                    </div>
+                    <div class="item__content">
+                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
+                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                        <div class="name">- John Doe -</div>
+                        <span>head of marketing, TB</span>
+
+                    </div>
+                </div>
+                <div class="testimonial__item">
+                    <div class="item__img">
+                        <img src="img/event_avatar1.jpg" alt="testimonial1">
+                    </div>
+                    <div class="item__content">
+                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
+                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                        <div class="name">- Kevin Paige -</div>
+                        <span>ABC</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video-demo -->
+    <section id="video-demo" >
+        <div class="container content__padding">
+            <div class="row justify-content-center py-5 heading__section_mb">
+                <div class="col-md-8">
+                    <div class="video-demo__header text-center">
+                        <h3 class="text-uppercase">Watch video demo</h3>
+                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
+                            malesuada leo sem quam
+                            pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="video-demo__content">
+                <div class="row justify-content-center">
+                    <div class="col-md-6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/CevxZvSJLk8"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="img-post container-fluid">
+            <div class="row">
+                <div class="col-md-6 px-0">
+                    <img src="img/post/p10.jpg" alt="demo1" class="img-fluid">
+                    <div class="img-post__content left">
+                        <span class="">News</span>
+                        <h3 class="">some services that we provide occationaly</h3>
+                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo
+                            sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 px-0">
+                    <img src="img/post/p11.jpg" alt="demo2" class="img-fluid">
+                    <div class="img-post__content right">
+                        <span class="">News</span>
+                        <h3 class="">some services that we provide occationaly</h3>
+                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo
+                            sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Price-table Section -->
-    <section id="price-table"></section>
+    <section id="price-table" class="content__padding">
+        <div class="container">
+            <div class="row justify-content-center py-5 heading__section_mb">
+                <div class="col-md-8 text-center">
+                    <h3 class="text-uppercase">PRICE TABLE</h3>
+                    <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
+                        malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your
+                        content.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4">
+                    <div class="card">
+                        <h1>Stater</h1>
+                        <div class="card__body__top">
+                            <h3 class="card-title">$ 29 <span>.00</span></h3>
+                            <p class="card-text">Per month.</p>
+                        </div>
+                        <div class="card__body__content">
+                            <p>24/7 Tech Suport</p>
+                            <p>Lorem ipsum dolor.</p>
+                            <p>ipsum dolor sit amet.</p>
+                            <p>dolor sit amet.</p>
+                        </div>
+                        <div class="card__body__bot">
+                            <a href="" class="btn btn-white">Purchase this plan</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card card-black">
+                        <h1>premium</h1>
+                        <div class="card__body__top">
+                            <h3 class="card-title">$ 49 <span>.00</span></h3>
+                            <p class="card-text">Per month.</p>
+                        </div>
+                        <div class="card__body__content">
+                            <p>24/7 Tech Suport</p>
+                            <p>Lorem ipsum dolor.</p>
+                            <p>ipsum dolor sit amet.</p>
+                            <p>dolor sit amet.</p>
+                        </div>
+                        <div class="card__body__bot">
+                            <a href="" class="btn btn-white">Purchase this plan</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <h1>enterprise</h1>
+                        <div class="card__body__top">
+                            <h3 class="card-title">$ 29 <span>.00</span></h3>
+                            <p class="card-text">Per month.</p>
+                        </div>
+                        <div class="card__body__content">
+                            <p>24/7 Tech Suport</p>
+                            <p>Lorem ipsum dolor.</p>
+                            <p>ipsum dolor sit amet.</p>
+                            <p>dolor sit amet.</p>
+                        </div>
+                        <div class="card__body__bot">
+                            <a href="" class="btn btn-white">Purchase this plan</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Purchase -->
+    <section id="purchase" class="content__padding">
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-8">    
+                    <div class="header">
+                        <h3>DON’T WANNA PURCHASE NOW? </h3>
+                        <p>subscribe to get in touch </p>
+                    </div>
+                   
+                    <div class="purchase__form">
+                        <form action="">
+                            <input type="text" placeholder="Enter your email address">
+                            <button type="button" class="btn btn-black">Subcribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact"></section>
