Hoàn thành phần layout và css phần đc giao

--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
     </section>
 
     <!-- Video-demo -->
-    <section id="video-demo" >
+    <section id="video-demo">
         <div class="container content__padding">
             <div class="row justify-content-center py-5 heading__section_mb">
                 <div class="col-md-8">
@@ -977,12 +977,12 @@
     <section id="purchase" class="content__padding">
         <div class="container">
             <div class="row justify-content-center text-center">
-                <div class="col-8">    
+                <div class="col-8">
                     <div class="header">
                         <h3>DON’T WANNA PURCHASE NOW? </h3>
                         <p>subscribe to get in touch </p>
                     </div>
-                   
+
                     <div class="purchase__form">
                         <form action="">
                             <input type="text" placeholder="Enter your email address">
@@ -993,11 +993,156 @@
             </div>
     </section>
 
+    <section id="client" class="content__padding">
+        <div class="container">
+            <div class="row justify-content-center py-5 heading__section_mb">
+                <div class="col-8 text-center">
+                    <h3 class="text-uppercase">OUR CLIENTS</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut explicabo iusto quaerat</p>
+                </div>
+            </div>
+            <div class="owl-3 owl-carousel">
+                <div class="client__item">
+                    <img src="img/clients/c-1.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-2.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-3.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-4.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-5.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-6.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-7.png" alt="customer1" class="img-fluid">
+                </div>
+                <div class="client__item">
+                    <img src="img/clients/c-8.png" alt="customer1" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact Section -->
-    <section id="contact"></section>
+    <section id="contact" class="content__padding">
+        <section class="contact__info content__padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="info__item">
+                            <i class="icon-map"></i>
+                            <h4 class="text-uppercase">Location</h4>
+                            <p>Upper Level, Overseas Passenger </p>
+                            <p>Terminal, The Rocks, Sydney 2000</p>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="info__item">
+                            <i class="icon-mobile"></i>
+                            <h4 class="text-uppercase">Call us</h4>
+                            <p>Any time. We are open 24/7</p>
+                            <p> +1 2345-67-89000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="info__item">
+                            <i class="icon-envelope"></i>
+                            <h4 class="text-uppercase">Mail us</h4>
+                            <p>get support via email</p>
+                            <p> mail@massivetheme.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="section__form content__padding">
+            <div class="container">
+                <div class="row justify-content-center py-5 heading__section_mb">
+                    <div class="col-8 text-center">
+                        <h3 class="text-uppercase">DROP US A LINE</h3>
+                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id
+                            quod maxime placeat facere possimus. Nam libero tempore</p>
+                    </div>
+
+                </div>
+                <form action="#" id="formContact">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Name*">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email*">
+                            </div>
+                            <div class="form-group">
+                                <input type="number" class="form-control" placeholder="Phone">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <textarea name="comment" id="comment" rows="4" placeholder="Comment" class="form-control"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-black btn-small">Send Message</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer Section -->
-    <footer id="footer"></footer>
+    <footer id="footer" class="content__padding">
+        <div class="container">
+            <div class="footer__header text-center">
+                <a href="">
+                    <img src="img/logo.png" alt="Logo">
+                </a>
+                <p>THE ULTIMATE THEME WITH MASSIVE COLLECTION</p>
+            </div>
+            <div class="footer__media text-center">
+                <ul>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-facebook-f"></i>                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-twitter"></i>
+                                                </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-dribbble"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-google-plus"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-behance"></i>
+                        </a>
+                    </li>
+                    
+                </ul>
+            </div>
+            <div class="footer__copyright text-center">
+                <h4>© MASSIVE 2014.</h4>
+                <p>BUILDING YOUR SITE WITH LOTS OF FUN</p>
+            </div>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
